# barch.py

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/: pypi-release.yml
barch/: __init__.py  client.py  endpoints.py  serializer.py
barch/enums/: __init__.py  base.py  character.py
barch/models/: __init__.py  base.py  character.py  http.py  raid.py  route.py
barch/services/: __init__.py  base.py  character.py  http.py  raid.py
docs/reference/: client.md  enums.md  models.md  result.md  serializer.md  services.md
master/: 404.html  index.html  objects.inv
master/reference/client/: index.html
master/reference/enums/: index.html
master/reference/models/: index.html
master/reference/result/: index.html
master/reference/serializer/: index.html
master/reference/services/: index.html
master/search/: search_index.json
reference/client/: index.html
reference/enums/: index.html
reference/models/: index.html
reference/result/: index.html
reference/serializer/: index.html
reference/services/: index.html
search/: search_index.json
v0.1.1/: 404.html
v0.1.1/reference/client/: index.html
v0.1.1/reference/enums/: index.html
v0.1.1/reference/services/: index.html
v0.1.1/search/: search_index.json
