[tool.poetry]
name = "barch-py"
version = "0.1.0"
description = ""
authors = ["Sagar <67011477+thevenuz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "barch"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
attrs = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.2.7"
mkdocs-material-extensions = "^1.1.1"
mike = "^1.1.2"
mkdocs-autorefs = "^0.5.0"
mkdocs-include-markdown-plugin = { version = "==4.0.4", python = "<3.12" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
